login and sign out complete

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,8 @@
 
     <body>
         
-        <div>
+        <!-- Testing backend functionality start -->
+        <div style="padding-left: 10rem; padding-top: 10rem;">
             <h1>Sign up</h1>
 
             <input type="text" placeholder="username..." id="signUpUsername">
@@ -35,6 +36,23 @@
 
             <button id="signUpBtn">Sign up</button>
         </div>
+
+        <div style="padding-left: 10rem; padding-top: 10rem;">
+            <h1>Login</h1>
+
+            <input type="text" placeholder="username..." id="loginUsername">
+
+            <input type="text" placeholder="password..." id="loginPassword">
+
+            <button id="loginBtn">Login</button>
+        </div>
+
+        <div style="padding-left: 10rem; padding-top: 10rem;">
+            <h1>Sign out</h1>
+
+            <button id="signOutBtn">Sign out</button>
+        </div>
+        <!-- Testing backend functionality start -->
 
         <!-- jquery cdn -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
