Updated sign up to include socials, began product schema

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,14 @@
 
             <input type="text" placeholder="store description..." id="signUpStoreDescription">
 
+            <br />
+
+            <input type="text" placeholder="instagram..." id="signUpInstagram">
+
+            <input type="text" placeholder="facebook..." id="signUpFacebook">
+
+            <input type="text" placeholder="twitter..." id="signUpTwitter">
+
             <button id="signUpBtn">Sign up</button>
         </div>
 
