addition of mixins and var in scss

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,6 +62,22 @@
         </div>
         <!-- Testing backend functionality start -->
 
+
+        <!-- setting up mixins -->
+        <div class="test">
+            <button class="btn-one">Button 1</button>
+            <button class="btn-two">Button 2</button>
+            <button class="btn-three">Button 3</button>
+
+            <h1 class="title">Title</h1>
+            <h3 class="heading">Heading</h3>
+            <h6 class="sub-heading">Subheading</h6>
+            <p class="body-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis rem ipsa cumque eius aperiam doloremque ducimus cum beatae corporis assumenda iusto quis illo omnis repudiandae, magni quasi pariatur est! Hic perferendis explicabo ipsum officia incidunt veritatis qui fugiat alias adipisci corrupti nesciunt, aliquid voluptatem expedita! Voluptate non sed tenetur repellat?</p>
+
+        </div>
+        <!-- end of mixins -->
+
+
         <!-- jquery cdn -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
