--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,8 +106,8 @@
                 </div>
             </div>
         </section>
-<!--         
-        Testing backend functionality start
+        
+        <!-- Testing backend functionality start -->
         <div style="padding-left: 10rem; padding-top: 10rem;">
             <h1>Sign up</h1>
 
@@ -180,8 +180,7 @@
 
             <button id="viewProductsBtn">View products</button>
         </div>
-  
-        <!-- Testing backend functionality start -->
+        <!-- Testing backend functionality end -->
 
 
         <!-- setting up mixins -->
