--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,9 @@
         <!-- font awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+        <!-- Bootstrap Link -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
         <!-- local stylesheet -->
         <link rel="stylesheet" href="./css/style.css">
     </head>
@@ -84,10 +87,10 @@
             <div class="landing__content">
                 <div class="landing__content-images">
                     <div class="landing__content-image">
-                        <img src="./img/landing-img-1.png" alt=""   class="landing__content-img">
+                        <!-- <img src="./img/landing-img-1.png" alt=""   class="landing__content-img"> -->
                     </div>
                     <div class="landing__content-image">
-                        <img src="./img/landing-img-2.png" alt=""  class="landing__content-img">
+                        <!-- <img src="./img/landing-img-2.png" alt=""  class="landing__content-img"> -->
                     </div>
                 </div>
                 <div class="landing__content-text">
@@ -102,6 +105,77 @@
                     <div class="landing__content-textbox">
                         <h3 class="landing__content-heading">3.</h3>
                         <p class="landing__content-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam lobortis et nisi nec iaculis. Aliquam ullamcorper dolor ac nibh ultricies, sit amet pretium eros tempus. Fusce gravida in purus vitae placerat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="landing__products">
+                <div class="landing__products-cards">
+                    <div class="card" style="width: 30rem;">
+                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
+                        <div class="card-body">
+                          <div class="card-body-top">
+                              <p class="card-name">Item Name</p>
+                              <p class="card-price">$34</p>
+                          </div>
+                          <div class="card-body-bottom">
+                              <p class="card-artist">Jane Doe</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card" style="width: 30rem;">
+                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
+                        <div class="card-body">
+                          <div class="card-body-top">
+                              <p class="card-name">Item Name</p>
+                              <p class="card-price">$34</p>
+                          </div>
+                          <div class="card-body-bottom">
+                              <p class="card-artist">Jane Doe</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card" style="width: 30rem;">
+                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
+                        <div class="card-body">
+                          <div class="card-body-top">
+                              <p class="card-name">Item Name</p>
+                              <p class="card-price">$34</p>
+                          </div>
+                          <div class="card-body-bottom">
+                              <p class="card-artist">Jane Doe</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card" style="width: 30rem;">
+                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
+                        <div class="card-body">
+                          <div class="card-body-top">
+                              <p class="card-name">Item Name</p>
+                              <p class="card-price">$34</p>
+                          </div>
+                          <div class="card-body-bottom">
+                              <p class="card-artist">Jane Doe</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card" style="width: 30rem;">
+                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
+                        <div class="card-body">
+                          <div class="card-body-top">
+                              <p class="card-name">Item Name</p>
+                              <p class="card-price">$34</p>
+                          </div>
+                          <div class="card-body-bottom">
+                              <p class="card-artist">Jane Doe</p>
+                          </div>
+                        </div>
+                      </div>
+                      
+                </div>
+                <div class="landing__products-more">
+                    <div class="landing__products-cont">
+                        <button class="landing__products-btn">See all products</button>
+                        <i class="fa-solid fa-arrow-right-long nav-fa-landing"></i>
                     </div>
                 </div>
             </div>
@@ -181,8 +255,8 @@
             <button id="viewProductsBtn">View products</button>
         </div>
   
-        <!-- Testing backend functionality start -->
-
+         Testing backend functionality start -->
+   
 
         <!-- setting up mixins -->
         <!-- <div class="test">
@@ -198,7 +272,7 @@
         </div> -->
 
            
-        <!-- end of mixins -->
+        <!-- end of mixins --> 
 
         <!-- footer -->
         <footer class="footer">
