post comments working

--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -16,6 +16,12 @@
         <div>
             <div id="productContainer"></div>
             <div id="authorContainer"></div>
+            <div id="commentContainer"></div>
+
+            <!-- <input type="text" id="commentField">
+            <button id="submitComment">Submit comment</button>
+
+            <div id="commentContainer"></div> -->
         </div>
 
         <!-- jquery cdn -->
