--- a/frontend/artist.html
+++ b/frontend/artist.html
@@ -37,7 +37,7 @@
                             SELLER PROFILE.
                       </textPath>
                     </text>
-                  </svg>
+                </svg>
             </div>
             
         </div>
@@ -122,7 +122,7 @@
             </div>
             <div class="artist-profile__bottom">
                 <div class="artist-products">
-                    <div class="card" style="width: 30rem;">
+                    <div class="card" style="width: 27rem;">
                         <div class="edit-btns">
                             <span class="fa-stack fa-2x">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
@@ -146,7 +146,7 @@
                         </div>
                       </div>
 
-                      <div class="card" style="width: 30rem;">
+                      <div class="card" style="width: 27rem;">
                         <div class="edit-btns">
                             <span class="fa-stack fa-2x">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
@@ -170,7 +170,7 @@
                         </div>
                       </div>
 
-                      <div class="card" style="width: 30rem;">
+                      <div class="card" style="width: 27rem;">
                         <div class="edit-btns">
                             <span class="fa-stack fa-2x">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
@@ -194,7 +194,7 @@
                         </div>
                       </div>
 
-                      <div class="card" style="width: 30rem;">
+                      <div class="card" style="width: 27rem;">
                         <div class="edit-btns">
                             <span class="fa-stack fa-2x">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
@@ -218,7 +218,7 @@
                         </div>
                       </div>
 
-                      <div class="card" style="width: 30rem;">
+                      <div class="card" style="width: 27rem;">
                         <div class="edit-btns">
                             <span class="fa-stack fa-2x">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
@@ -242,7 +242,7 @@
                         </div>
                       </div>
 
-                      <div class="card" style="width: 30rem;">
+                      <div class="card" style="width: 27rem;">
                         <div class="edit-btns">
                             <span class="fa-stack fa-2x">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
@@ -266,31 +266,7 @@
                         </div>
                       </div>
 
-                      <div class="card" style="width: 30rem;">
-                        <div class="edit-btns">
-                            <span class="fa-stack fa-2x">
-                                <i class="fa-solid fa-circle fa-stack-2x"></i>
-                                <i class="fa-solid fa-pen-to-square fa-stack-1x fa-inverse"></i>
-                            </span>
-
-                            <span class="fa-stack fa-2x">
-                                <i class="fa-solid fa-circle circle-trash fa-stack-2x"></i>
-                                <i class="fa-solid fa-trash-can fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </div>
-                        <img class="card-img-top" src="./img/landing-img-1.png" alt="Card image cap">
-                        <div class="card-body">
-                          <div class="card-body-top">
-                              <p class="card-name">Item Name</p>
-                              <p class="card-price">$34</p>
-                          </div>
-                          <div class="card-body-bottom">
-                              <p class="card-artist">Jane Doe</p>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="card" style="width: 30rem;">
+                      <div class="card" style="width: 27em;">
                         <div class="edit-btns">
                             <span class="fa-stack fa-2x">
                                 <i class="fa-solid fa-circle fa-stack-2x"></i>
