--- a/frontend/index.html
+++ b/frontend/index.html
@@ -182,6 +182,13 @@
         </section>
         
         <!-- Testing backend functionality start -->
+        <div style="padding-left: 10rem; padding-top: 10rem;" id="profileDivNav">
+            <h1>Account profile</h1>
+
+            <a href="./profile.html" id="myProfileBtn">My profile</a>
+
+        </div>
+
         <div style="padding-left: 10rem; padding-top: 10rem;">
             <h1>Sign up</h1>
 
@@ -198,6 +205,8 @@
                 <label for="no">no</label>
                 <input type="radio" name="signUpSeller" value="no">
             </div>
+
+            <input type="text" placeholder="profile picture..." id="signUpProfilePicture">
 
             <input type="text" placeholder="store name..." id="signUpStoreName">
 
