product pages and responsiveness

--- a/frontend/artist.html
+++ b/frontend/artist.html
@@ -323,8 +323,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <h6>Privacy & Cookies Policy</h6>
-                <h6>In collaboration with Wellington Potters Association</h6>
+                <h6 class="privacy">Privacy & Cookies Policy</h6>
+                <h6 class="welly-potters">In collaboration with Wellington Potters Association</h6>
                 <div class="socials">
                     <div class="socials-container">
                         <i class="fa-brands fa-instagram"></i>
