Home page styled, forms completed, add products started

--- a/frontend/upload-product.html
+++ b/frontend/upload-product.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <!-- Nav Ends -->
-
+        <!-- Dummy comment -->
         <!-- Product Form Begins -->
             <div class="upload">
                 <!-- Upload Image Section Begins -->
