removed multiple IDs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -202,15 +202,15 @@
                         <div class="login">        
                             <div class="form__input">
                                 <label for="username">Username *</label>
-                                <input name="username" class="login-input form-text-input" type="text" placeholder="username..." id="loginUsername">
+                                <input name="username" class="login-input form-text-input" type="text" placeholder="username...">
                             </div>
                             <div class="form__input">
                                 <label for="password">Password *</label>
-                                <input name="password" class="login-input form-text-input" type="text"      placeholder="email..." id="loginEmail">
+                                <input name="password" class="login-input form-text-input" type="text"      placeholder="email...">
                             </div>
                             <div class="form__btns">
-                                <button class="login-btn form-btn" id="loginBtn">Login</button>
-                                <button class="login-btn form-btn-alt" id="loginBtn">Forgot your password?</button>
+                                <button class="login-btn form-btn" >Login</button>
+                                <button class="login-btn form-btn-alt">Forgot your password?</button>
                             </div>
                             <div class="form__divider"></div>
                             <div class="form__alts">
@@ -249,15 +249,15 @@
                         <div class="signup">      
                             <div class="form__input">
                                 <label for="email">Email *</label>
-                                <input name="email" class="signup-input form-text-input" type="text"      placeholder="email..." id="signUpEmail">
+                                <input name="email" class="signup-input form-text-input" type="text"      placeholder="email...">
                             </div>  
                             <div class="form__input">
                                 <label for="username">Username *</label>
-                                <input name="username" class="signup-input form-text-input" type="text" placeholder="username..." id="signUpUsername">
+                                <input name="username" class="signup-input form-text-input" type="text" placeholder="username...">
                             </div>
                             <div class="form__input">
                                 <label for="password">Password *</label>
-                                <input name="password" class="signup-input form-text-input" type="text"      placeholder="password..." id="signUpPassword">
+                                <input name="password" class="signup-input form-text-input" type="text"      placeholder="password...">
                             </div>
                             <div class="form__radio-all">
                             <p for="">Will you be selling your work?</p>
@@ -273,7 +273,7 @@
                             </div>
                             </div>
                             <div class="form__btns">
-                                <button class="signup-btn form-btn" id="loginBtn">Sign Up</button>
+                                <button class="signup-btn form-btn">Sign Up</button>
                                 <button class="signup-btn form-btn" id="signUpBtnCont" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Proceed to Store Registration</button>
                             </div>
                         </div>
@@ -311,13 +311,13 @@
                                 <div class="form__input-box">
                                     <div class="form__input form__input-alt">
                                         <label for="username">Store Name *</label>
-                                        <input name="username" class="signup-input form-text-input" type="text" placeholder="Enter store name here" id="loginUsername">
+                                        <input name="username" class="signup-input form-text-input" type="text" placeholder="Enter store name here">
                                     </div>
                                     <div class="form__image-preview-box">
                                         <div class="form__input form__input-alt">
                                             <label for="imageURL">Image URL *</label>
                                             <div class="form__image-preview-box">
-                                                <input name="imageURL" class="login-input form-text-input" type="text"      placeholder="email..." id="loginEmail">
+                                                <input name="imageURL" class="login-input form-text-input" type="text"      placeholder="email...">
                                                 <button class="signup__image-preview" id="imgPreviewBtn" class="modal-btn"><i class="fa-solid fa-plus"></i></button>
                                             </div>
                                         </div>
@@ -328,22 +328,22 @@
                          
                             <div class="form__input">
                                 <label for="description">Store Description *</label>
-                                <textarea name="description" class="login-input form-text-input" type="text" placeholder="store description" id="loginUsername"></textarea>
+                                <textarea name="description" class="login-input form-text-input" type="text" placeholder="store description"></textarea>
                             </div>
                             <div class="form__input">
                                 <label for="username">Instagram</label>
-                                <input name="username" class="login-input form-text-input signup-description" type="text" placeholder="username..." id="loginUsername">
+                                <input name="username" class="login-input form-text-input signup-description" type="text" placeholder="username...">
                             </div>
                             <div class="form__input">
                                 <label for="username">Facebook</label>
-                                <input name="username" class="login-input form-text-input" type="text" placeholder="username..." id="loginUsername">
+                                <input name="username" class="login-input form-text-input" type="text" placeholder="username...">
                             </div>
                             <div class="form__input">
                                 <label for="username">Twitter</label>
-                                <input name="username" class="login-input form-text-input" type="text" placeholder="username..." id="loginUsername">
+                                <input name="username" class="login-input form-text-input" type="text" placeholder="username...">
                             </div>
                             <div class="form__btns">
-                                <button class="login-btn form-btn" id="loginBtn">Create Account</button>
+                                <button class="login-btn form-btn">Create Account</button>
                             </div>
                         </div>
                     </div>
