--- a/frontend/index.html
+++ b/frontend/index.html
@@ -470,6 +470,29 @@
 
             <input type="text" placeholder="Image url..." id="addProductImgThreeUrl">
 
+            <input type="text" placeholder="Category..." id="addProductCategory">
+
+            <select id="addProductColour">
+                <option value="beige">Beige</option>
+                <option value="black">Black</option>
+                <option value="blue">Blue</option>
+                <option value="brown">Brown</option>
+                <option value="white">White</option>
+                <option value="yellow">Yellow</option>
+            </select>
+
+            <input type="text" placeholder="Dimensions.." id="addProductDimensions">
+
+            <select id="addProductDishwasherSafe">
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+            </select>
+
+            <select id="addProductMicrowaveSafe">
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+            </select>
+
             <button id="addProductBtn">Add product</button>
         </div>
 
