Add products page is styled and responsive

--- a/frontend/upload-product.html
+++ b/frontend/upload-product.html
@@ -20,6 +20,7 @@
     </head>
 
     <body>
+        <div class="add-product__background"></div>
         <!-- Nav Begins -->
         <div class="nav">
             <div class="nav__logo">
@@ -56,6 +57,8 @@
         <!-- Nav Ends -->
         <!-- Dummy comment -->
         <!-- Product Form Begins -->
+
+
             <div class="upload">
                 <!-- Upload Image Section Begins -->
                 <div class="upload__images">
