upload product backend intergrated with upload product frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -455,7 +455,7 @@
 
         </div>
 
-        <div style="padding-left: 10rem; padding-top: 10rem;">
+        <!-- <div style="padding-left: 10rem; padding-top: 10rem;">
             <h1>Add product</h1>
 
             <input type="text" placeholder="product name..." id="addProductName">
@@ -494,7 +494,7 @@
             </select>
 
             <button id="addProductBtn">Add product</button>
-        </div>
+        </div> -->
 
         <div style="padding-left: 10rem; padding-top: 10rem;">
             <h1>Delete product</h1>
